--- a/JavaScript Tutorial/HTML Formular mit JavaScript vearbeiten (inkl. Dateiupload)/Frontend/index.html
+++ b/JavaScript Tutorial/HTML Formular mit JavaScript vearbeiten (inkl. Dateiupload)/Frontend/index.html
@@ -28,7 +28,7 @@
         <p>
           <label for="avatar">Avatar</label>
           <br />
-          <input type="text" id="avatar" name="avatar" required />
+          <input type="file" name="avatar" id="avatar" />
         </p>
         <p>
           <input type="checkbox" id="spam" name="spam" checked />
