--- a/JavaScript Tutorial/Console.Log/index.html
+++ b/JavaScript Tutorial/Console.Log/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Hallo Welt!</h1>
     <script src="app.js"></script>
     </script>
   </body>
