--- a/Website erstellen mit Mario/impressum.html
+++ b/Website erstellen mit Mario/impressum.html
@@ -9,6 +9,8 @@
       name="description"
       content="Web Entwicklung einfach starten - Alles rundum Webentwicklung, Webdesigen und Webanwendung"
     />
+    <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
