--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -10,6 +10,7 @@
       content="Web Entwicklung einfach starten - Alles rundum Webentwicklung, Webdesigen und Webanwendung"
     />
     <link rel="manifest" href="manifest.json" />
+    <link rel="icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="apple-touch-icon" href="icons/apple-icon-180.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
