theme color eingebunden

--- a/Website erstellen mit Mario/index.html
+++ b/Website erstellen mit Mario/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web Entwicklung einfach starten - Alles rundum Webentwicklung, Webdesigen und Webanwendung"
     />
+    <meta name="theme-color" content="#737373" />
     <link rel="manifest" href="manifest.json" />
     <link rel="icon" href="./img/favicon.png" />
     <link rel="stylesheet" href="css/style.css" />
