--- a/JavaScript Tutorial/Modulare Programmierung/index.html
+++ b/JavaScript Tutorial/Modulare Programmierung/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script type="modules" src="app.js"></script>
+    <script type="module" src="app.js"></script>
   </body>
 </html>
