--- a/Grundlagen_Animation/GSAP Animation/index.html
+++ b/Grundlagen_Animation/GSAP Animation/index.html
@@ -9,9 +9,51 @@
   </head>
   <body>
     <!-- Navigation -->
-
+    <div class="container mx-auto px-3">
+      <ul class="flex justify-center font-bold">
+        <li>
+          <a href="#" class="block py-3 p-5 hover:bg-green-600 hover:text-white"
+            >Startseite</a
+          >
+        </li>
+        <li>
+          <a href="#" class="block py-3 p-5 hover:bg-green-600 hover:text-white"
+            >Über uns</a
+          >
+        </li>
+        <li>
+          <a href="#" class="block py-3 p-5 hover:bg-green-600 hover:text-white"
+            >Kontakt</a
+          >
+        </li>
+      </ul>
+    </div>
     <!-- Hero Image -->
-
+    <div
+      class="w-full bg-cover bg-center"
+      style="background-image: url(./Asset/src/IMAG5763.jpg); height: 60vh"
+    ></div>
     <!-- Info Box -->
+    <div class="container mx-auto px-3">
+      <div class="relative -top-20 w-full px-8 pt-8 bg-white">
+        <h1 class="text-3xl pb-4">Patong Beach</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. At soluta
+          illo doloribus ipsum, quasi, adipisci harum sunt nisi et qui
+          voluptatem a dolorem numquam laboriosam ex. Doloremque voluptatem
+          consequuntur atque repellendus alias sit, odio minima dolores id
+          adipisci placeat perspiciatis, eligendi laboriosam dolorem quidem
+          voluptates esse cum error necessitatibus, aperiam nemo. Laborum
+          eveniet libero voluptatibus saepe earum. Tempore fugiat quam enim
+          placeat incidunt id, assumenda dignissimos corrupti iure quidem?
+          Excepturi magnam aspernatur dolorem neque repudiandae accusamus
+          asperiores tenetur omnis qui distinctio ab exercitationem consequatur
+          doloribus reprehenderit quae corrupti fugiat quidem, adipisci quas
+          expedita officiis officia blanditiis ea! Dignissimos, temporibus qui.
+        </p>
+      </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
