--- a/Grundlagen_Animation/GSAP Animation/index.html
+++ b/Grundlagen_Animation/GSAP Animation/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- Navigation -->
     <div class="container mx-auto px-3">
-      <ul class="flex justify-center font-bold">
+      <ul id="navigation" class="flex justify-center font-bold">
         <li>
           <a href="#" class="block py-3 p-5 hover:bg-green-600 hover:text-white"
             >Startseite</a
