--- a/Grundlagen_Animation/GSAP Animation/index.html
+++ b/Grundlagen_Animation/GSAP Animation/index.html
@@ -30,9 +30,11 @@
     </div>
     <!-- Hero Image -->
     <div
-      class="w-full bg-cover bg-center"
+      class="relative w-full bg-cover bg-center overflow-hidden"
       style="background-image: url(./Asset/src/IMAG5763.jpg); height: 60vh"
     ></div>
+    <div id="box1" class="absolute top-0 w-full h-1/2 bg-white"></div>
+    <div id="box2" class="absolute bottom-0 w-full h-1/2 bg-white"></div>
     <!-- Info Box -->
     <div class="container mx-auto px-3">
       <div class="relative -top-20 w-full px-8 pt-8 bg-white">
