--- a/CSS Grundlagen/Formular erstellen/index.html
+++ b/CSS Grundlagen/Formular erstellen/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -11,10 +11,11 @@
     <form>
       <h1>Account erstellen</h1>
       <div class="inputs_container">
-        <input type="text" placeholder="Benutzename">
-        <input type="text" placeholder="Email">
-        <input type="password" placeholder="PassworT">
+        <input type="text" placeholder="Benutzename" />
+        <input type="text" placeholder="Email" />
+        <input type="password" placeholder="Passwort" />
       </div>
+      <button>Erstellen</button>
     </form>
   </body>
 </html>
