label und geheime Seite erstellt

--- a/CSS Grundlagen/Formular erstellen/index.html
+++ b/CSS Grundlagen/Formular erstellen/index.html
@@ -11,8 +11,11 @@
     <form>
       <h1>Account erstellen</h1>
       <div class="inputs_container">
+        <label for="">Benutzername</label>
         <input type="text" placeholder="Benutzename" />
+        <label for="">Email</label>
         <input type="text" placeholder="Email" />
+        <label for="">Passwort</label>
         <input type="password" placeholder="Passwort" />
       </div>
       <button>Erstellen</button>
