--- a/CSS Grundlagen/Formular erstellen/geheime-seite.html
+++ b/CSS Grundlagen/Formular erstellen/geheime-seite.html
@@ -7,7 +7,19 @@
     <title>Geheime Seite</title>
   </head>
   <body>
-    <h1>Das ist die geheime Seite</h1>
-    <p>Das Geheimnis ist:</p>
-  </body>
+    <h1 style="font-family: verdana">Das ist die geheime Seite von Satch</h1>
+    <p style="font-family: verdana">Das Geheimnis ist:</p>
+    <script>
+      const username = new URL(location.href).searchParams.get('username');
+      const useremail = new URL(location.href).searchParams.get('useremail');
+      const userpassword = new URL(location.href).searchParams.get(
+        'userpassword'
+      );
+
+      if (username === 'Satch' && userpassword === 'Production') {
+        const p = document.querySelector('p');
+        p.innerText = 'Oh, glückwunsch du hast dich erfolgreich eingelogt';
+      }
+    </script>
+  </body>         
 </html>
