--- a/CSS Grundlagen/Formular erstellen/index.html
+++ b/CSS Grundlagen/Formular erstellen/index.html
@@ -8,15 +8,15 @@
     <title>Registrieren</title>
   </head>
   <body>
-    <form>
+    <form action="geheime-seite.html">
       <h1>Account erstellen</h1>
       <div class="inputs_container">
         <label for="">Benutzername</label>
-        <input type="text" placeholder="Benutzename" />
+        <input type="text" name="username" placeholder="Benutzename" />
         <label for="">Email</label>
-        <input type="text" placeholder="Email" />
+        <input type="text" name="useremail" placeholder="Email" />
         <label for="">Passwort</label>
-        <input type="password" placeholder="Passwort" />
+        <input type="password" name="userpassword" placeholder="Passwort" />
       </div>
       <button>Erstellen</button>
     </form>
