fertig mit login

--- a/CSS Grundlagen/Formular erstellen/seiten/geheime-seite.html
+++ b/CSS Grundlagen/Formular erstellen/seiten/geheime-seite.html
@@ -8,15 +8,13 @@
   </head>
   <body>
     <h1 style="font-family: verdana">Das ist die geheime Seite von Satch</h1>
-    <p style="font-family: verdana">Das Geheimnis ist:</p>
+    <p style="font-family: verdana">Das Geheimnis ist: Es gibt keins!</p>
     <script>
       const username = new URL(location.href).searchParams.get('username');
       const useremail = new URL(location.href).searchParams.get('useremail');
       const userpassword = new URL(location.href).searchParams.get(
         'userpassword'
       );
-
-      
     </script>
-  </body>         
+  </body>
 </html>
