--- a/Grundlagen_Animation/GSAP Animation/index.html
+++ b/Grundlagen_Animation/GSAP Animation/index.html
@@ -36,9 +36,9 @@
     <div id="box1" class="absolute top-0 w-full h-1/2 bg-white"></div>
     <div id="box2" class="absolute bottom-0 w-full h-1/2 bg-white"></div>
     <!-- Info Box -->
-    <div class="container mx-auto px-3">
+    <div id="teaserInfo" class="container mx-auto px-3">
       <div class="relative -top-20 w-full px-8 pt-8 bg-white">
-        <h1 class="text-3xl pb-4">Patong Beach</h1>
+        <h1 id="teaserTitle" class="text-3xl pb-4">Patong Beach</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. At soluta
           illo doloribus ipsum, quasi, adipisci harum sunt nisi et qui
