--- a/JavaScript Tutorial/Importiere JSON und CSS in JavaScript/index.html
+++ b/JavaScript Tutorial/Importiere JSON und CSS in JavaScript/index.html
@@ -20,7 +20,8 @@
       molestiae laborum! Repellendus soluta temporibus officia beatae
       consequatur accusantium. Est illo veritatis quos quo modi culpa?
     </p>
-
+    <button id="loadModule">Modul Laden</button>
+    
     <script src="app.js" type="Module"></script>
   </body>
 </html>
