html & css erstellt

--- a/CSS Grundlagen/CSS Cards/index.html
+++ b/CSS Grundlagen/CSS Cards/index.html
@@ -8,12 +8,16 @@
     <title>Card Test</title>
   </head>
   <body>
-    <div class="Card">
-      <header class="card-header">Tag 1</header>
-      <div class="card-content">
-        <p>Flug nach Thailand</p>
-        <p>Startdatum: 01.04.2022</p>
+    <section class="journey">
+      <h1>Travlr</h1>
+      <div id="find-journey" class="container"></div>
+      <div class="card">
+        <header class="card-header">Tag 1</header>
+        <div class="card-content">
+          <p>Flug nach Thailand</p>
+          <p>Startdatum: 01.04.2022</p>
+        </div>
       </div>
-    </div>
+    </section>
   </body>
 </html>
