--- a/CSS Grundlagen/CSS Cards/index.html
+++ b/CSS Grundlagen/CSS Cards/index.html
@@ -18,6 +18,16 @@
           <p>Startdatum: 01.04.2022</p>
         </div>
       </div>
+      <div class="card1 border-light mb-1" style="max-width: 25rem">
+        <div class="card-header1">Header</div>
+        <div class="card-body1">
+          <h5 class="card-title1">Light card title</h5>
+          <p class="card-text1">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
