--- a/CSS Grundlagen/CSS Cards/index.html
+++ b/CSS Grundlagen/CSS Cards/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="UTF-8" />
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="card1 border-light mb-1" style="max-width: 25rem">
-        <div class="card-header1">Header</div>
+        <div class="card-header1">Header<i class="far fa-edit"></i></div>
         <div class="card-body1">
           <h5 class="card-title1">Light card title</h5>
           <p class="card-text1">
@@ -29,5 +29,7 @@
         </div>
       </div>
     </section>
+    <i class="far fa-edit"></i>
+    <i class="far far fa-trash-alt"></i>
   </body>
 </html>
