hover effect auf icon

--- a/CSS Grundlagen/CSS Cards/index.html
+++ b/CSS Grundlagen/CSS Cards/index.html
@@ -5,6 +5,10 @@ i<!DOCTYPE html>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/0542d03b7b.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Card Test</title>
   </head>
   <body>
@@ -19,7 +23,10 @@ i<!DOCTYPE html>
         </div>
       </div>
       <div class="card1 border-light mb-1" style="max-width: 25rem">
-        <div class="card-header1">Header<i class="far fa-edit"></i></div>
+        <div class="card-header1">
+          Header <i class="far fa-edit"></i>
+          <i class="far far fa-trash-alt"></i>
+        </div>
         <div class="card-body1">
           <h5 class="card-title1">Light card title</h5>
           <p class="card-text1">
@@ -30,6 +37,7 @@ i<!DOCTYPE html>
       </div>
     </section>
     <i class="far fa-edit"></i>
-    <i class="far far fa-trash-alt"></i>
+
+    <i class="fab fa-facebook" style="color: black"></i>
   </body>
 </html>
