card differnt styles

--- a/CSS Grundlagen/CSS Cards/index.html
+++ b/CSS Grundlagen/CSS Cards/index.html
@@ -13,16 +13,16 @@ i<!DOCTYPE html>
   </head>
   <body>
     <section class="journey">
-      <h1>Travlr</h1>
+      <h1>Triplr</h1>
       <div id="find-journey" class="container"></div>
       <div class="card">
         <header class="card-header">Tag 1</header>
         <div class="card-content">
           <p>Flug nach Thailand</p>
-          <p>Startdatum: 01.04.2022</p>
+          <p>Startdatum: 01.04.2022 15:00 Uhr</p>
         </div>
       </div>
-      <div class="card1 border-light mb-1" style="max-width: 25rem">
+      <div class="card1 border-light mb-5" style="max-width: 25rem">
         <div class="card-header1">
           Header <i class="far fa-edit"></i>
           <i class="far far fa-trash-alt"></i>
